Btn class contrast fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -152,7 +152,7 @@ p {
 .btn {
   text-transform: uppercase;
   background: var(--clr-primary-5);
-  color: var(--clr-primary-1);
+  color: hsl(45, 90%, 88%);
   padding: 0.375rem 0.75rem;
   letter-spacing: var(--spacing);
   display: inline-block;
